syntax = "proto3";

package auth;
option go_package="authpb";

message LoginRequest {
    string Login = 1;
    string Password =2;
}

message AuthResponse {
    string Token =1;
}

message SignupRequest {
    string Email = 1;
    string UserName = 2;
    string Password = 3;
}

message UniqueUserNameValidateRequest {
    string UserName = 1;
}

message UniqueEmailValidateRequest {
    string Email = 1;
}

message UniqueValidateResponse {
    bool IsUnique = 1;
}

service AuthService {
    rpc Login(LoginRequest) returns (AuthResponse) {};
    rpc Signup(SignupRequest) returns (AuthResponse) {};
    rpc UniqueUserNameValidate(UniqueUserNameValidateRequest) returns (UniqueValidateResponse) {};
    rpc UniqueEmailValidate(UniqueEmailValidateRequest) returns (UniqueValidateResponse) {};
}